--- a/handshake-protocol.cabal
+++ b/handshake-protocol.cabal
@@ -79,16 +79,22 @@ common common-options
     clash-prelude >= 1.8.2 && < 1.10,
     ghc-typelits-natnormalise,
     ghc-typelits-extra,
-    ghc-typelits-knownnat
+    ghc-typelits-knownnat,
+
+    lens,
+    mtl,
+    generic-monoid
 
 
 library
   import: common-options
   hs-source-dirs: src
   exposed-modules:
-    Protocol.Connector
-  other-modules:
+    Protocol.Connector,
+    Protocol.Channel,
     Protocol.Internal.Util
+  other-modules:
+    -- Protocol.Internal.Util
   default-language: Haskell2010
 
 executable clash
@@ -124,7 +130,7 @@ test-suite test-library
   ghc-options: -threaded
   main-is: unittests.hs
   other-modules:
-    -- Tests.Example.Project
+    Tests.Simple
   build-depends:
     handshake-protocol,
     QuickCheck,
