--- a/handshake-protocol.cabal
+++ b/handshake-protocol.cabal
@@ -85,7 +85,9 @@ common common-options
     mtl,
     generic-monoid,
     extra,
-    profunctors
+    profunctors,
+    HList,
+    tagged
 
 
 library
@@ -93,14 +95,8 @@ library
   hs-source-dirs: src
   exposed-modules:
     Protocol.FSM,
-    -- Protocol.Connector,
-    -- Protocol.Channel,
-    -- Protocol.State,
-    -- Protocol.Index,
     Protocol.Interface
-    -- Protocol.Internal.Util
   other-modules:
-    -- Protocol.Internal.Util
   default-language: Haskell2010
 
 executable clash
@@ -136,8 +132,6 @@ test-suite test-library
   ghc-options: -threaded
   main-is: unittests.hs
   other-modules:
-    -- Tests.Simple
-    -- Tests.Arbiter
     Tests.FSM
   build-depends:
     handshake-protocol,
