--- a/handshake-protocol.cabal
+++ b/handshake-protocol.cabal
@@ -28,6 +28,7 @@ common common-options
     LambdaCase
     NamedFieldPuns
     NoStarIsType
+    PatternSynonyms
     PolyKinds
     RankNTypes
     RecordWildCards
@@ -97,6 +98,7 @@ library
   exposed-modules:
     Protocol.FSM,
     Protocol.Interface,
+    Protocol.Handshake,
     Tests.FSM
   other-modules:
   default-language: Haskell2010
