--- a/handshake-protocol.cabal
+++ b/handshake-protocol.cabal
@@ -20,6 +20,7 @@ common common-options
     DeriveLift
     DeriveTraversable
     DerivingStrategies
+    DerivingVia
     FlexibleContexts
     FlexibleInstances
     GADTs
@@ -99,6 +100,7 @@ library
     Protocol.FSM,
     Protocol.Interface,
     Protocol.Handshake,
+    Protocol.AXILite,
     Tests.FSM
   other-modules:
   default-language: Haskell2010
