--- a/handshake-protocol.cabal
+++ b/handshake-protocol.cabal
@@ -95,9 +95,9 @@ library
   import: common-options
   hs-source-dirs: src
   exposed-modules:
-    Protocol.FSM,
-    Protocol.Handshake,
-    Protocol.AXILite
+    Protocol.FSM
+    -- Protocol.Handshake,
+    -- Protocol.AXILite
   other-modules:
   default-language: Haskell2010
 
